--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://atlanticmedia.applytojob.com/apply/uuhM9K9rgG/Associate-Product-Manager'>Associate Product Manager - Atlantic Media - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/pagerduty/f4c0787b-c68a-478a-96a7-584e0832403b'>PagerDuty - Product Manager, Integrations</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/PeerlessIndustries/743999692397068-senior-product-manager'>Peerless Industries Senior Product Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/medidata-solutions/job/oTfnafwp'>Medidata Solutions Careers - Senior Product Owner</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
@@ -84,11 +96,11 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tipico/743999692361344-product-manager-m-f-d-crm'>Tipico Product Manager (m/f/d) CRM | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tipico/743999692361344-product-manager-m-f-d-crm'>Tipico Product Manager (m/f/d) CRM | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -96,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://close2real.join.com/jobs/255648-technical-product-owner-for-berlin-healthtech-startup-m-w-d'>Job @ close2real (Berlin): Technical Product Owner... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://close2real.join.com/jobs/255648-technical-product-owner-for-berlin-healthtech-startup-m-w-d'>Job @ close2real (Berlin): Technical Product Owner... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -136,6 +148,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
+<h5><a href='https://boards.greenhouse.io/cruise/jobs/1781489?gh_jid=1781489'>Job Application for Product Manager - Customer Support at Cruise</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... The Product Manager, Customer Support works with our cross-functional team of 
+designers and engineers, and operations to lead the vision, strategy, and?...</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/efront/28cc465c-cb86-4379-955c-ddf53a48d767'>eFront - Product Owner - Paris or Belgrade</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -157,7 +174,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -169,7 +186,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/symplicity/14d39fcf-96ce-4d46-b5ea-ef6c4ec9c418'>Symplicity - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/symplicity/14d39fcf-96ce-4d46-b5ea-ef6c4ec9c418'>Symplicity - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -197,7 +214,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Technical-Product-Manager_R-46038?source=BuiltInAustin'>Senior Technical Product Manager, Sales and Support Platforms</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Technical-Product-Manager_R-46038?source=BuiltInAustin'>Senior Technical Product Manager, Sales and Support Platforms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... ... leverage native Salesforce.com platform capabilities. Experience applying 
 machine learning/AI to drive improvements in sales or customer support 
@@ -207,7 +224,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/blackline/job/ojrDafwh'>BlackLine Careers - Principal Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blackline/job/ojrDafwh'>BlackLine Careers - Principal Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -231,7 +248,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pegipegi-dot-com.workable.com/j/6053F93353?viewed=true'>Pegipegi - Jobs: Associate Product Manager - Apply online</a></h5> 
+<h5><a href='https://pegipegi-dot-com.workable.com/j/6053F93353?viewed=true'>Pegipegi - Jobs: Associate Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Associate Product Manager at Pegipegi.</p>
 <hr/>
@@ -324,7 +341,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -336,7 +353,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -439,23 +456,6 @@ other?...</p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/wayfair/jobs/4366347002'>Job Application for Product Manager, Inventory Trust at Wayfair</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692200516-product-manager-h-f-'>Proprioo Product manager (H/F) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://winnow.workable.com/j/6466BEAD71?viewed=true'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... You will have experience working as a Product Owner for a technology company 
-delivering SaaS solutions, or you might be working in a Business Analyst or?...</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/progress/job/o65nafws'>Progress Careers - Senior Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/curology/jobs/1791435'>Job Application for Product Manager, Logistics at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
